--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: AS213151
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Educational & Research Network
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/66325659?s=400&u=c0c27a46ebaefde2a27b99118a20e9e116a690a1&v=4
 
 #
 # Flags below are optional
