--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: AS213151
 description: Educational & Research Network
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/66325659?s=400&u=c0c27a46ebaefde2a27b99118a20e9e116a690a1&v=4
+avatar: /images/AS213151.png
 
 #
 # Flags below are optional
