--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: AS213151
 
 # Short bio or description (displayed in the header)
-description: Educational & Research Network
+description: Christian Elsen Network
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/AS213151.png
