--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@ avatar: /images/AS213151.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  url: https://www.as213151.net 
+  url: https://chris.elsen.xyz 
   dribbble:
   email:
   facebook:
   flickr:
-  github: AS213151/
+  github: chriselsen
   instagram:
   linkedin: christianelsen
   pinterest:
