--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,12 @@
+- title: Home
+  url: /
+
 - title: About
   url: /about
   sublinks:
     - title: Team
       url: /team
+
 - title: Network
   url: /network
   sublinks:
