--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer-links:
   linkedin: christianelsen
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: ChristianElsen
+  twitter:
   mastodon: https://noc.social/@chriselsen
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
